--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         </p>
       </footer>
     </section>
-    <audio id="ramadantune" src="ramadantune.mp3" autoplay="true" loop></audio>
+    <audio id="ramadantune" src="ramadantune.mp3" autoplay loop>
+      <source src="ramadantune.mp3" type="audio/mpeg">
+    </audio>
     <script>
       if (window.location.search) {
         let query = new URLSearchParams(window.location.search);
