--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
         </p>
       </footer>
     </section>
-    <audio id="ramadantune" src="ramadantune.mp3" autoplay loop>
-      <source src="ramadantune.mp3" type="audio/mpeg">
-    </audio>
+    <audio id="ramadantune" src="ramadantune.mp3" autoplay loop></audio>
     <script>
       if (window.location.search) {
         let query = new URLSearchParams(window.location.search);
