--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
       </footer>
     </section>
-    <audio id="ramadantune" src="ramadantune.mp3" autoplay loop></audio>
+    <video id="ramadantune" src="ramadantune.mp3" autoplay loop></video>
     <script>
       if (window.location.search) {
         let query = new URLSearchParams(window.location.search);
