--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="greetings">
           <h2>مارچ 2025</h2>
           <h1 class="margin-16px">ماہ رمضان</h1>
-          <form class="margin-16px" action="/" method="get">
+          <form class="margin-16px" action="" method="get">
             <input
               required
               class="input"
