--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
           <b>Credits: &nbsp; &nbsp; </b> Freepiks <br />
           Muhammad Ashar Temoor
         </p>
-        <button onclick="shareToWhatsApp()">Share on WhatsApp</button>
       </footer>
     </section>
     <video id="ramadantune" src="ramadantune.mp3" autoplay loop></video>
@@ -65,7 +64,7 @@
           document.getElementById("sName").innerHTML =
             query["name"] + "<br> " + "<h3>کی جانب سےآپ کو رمضان مبارک</h3>";
           document.getElementById("sMessage").innerHTML =
-            "<p>" + query["message"] + "</p>";
+            "<p>" + query["message"] + "</p> </br> <button onclick="shareToWhatsApp()">Share on WhatsApp</button>";
           console.log(query);
         }
       }
