--- a/index.html
+++ b/index.html
@@ -64,21 +64,10 @@
           document.getElementById("sName").innerHTML =
             query["name"] + "<br> " + "<h3>کی جانب سےآپ کو رمضان مبارک</h3>";
           document.getElementById("sMessage").innerHTML =
-            "<p>" + query["message"] + "</p> </br> <button onclick="shareToWhatsApp()">Share on WhatsApp</button>";
+            "<p>" + query["message"] + "</p> <br> <button onclick=" + "shareToWhatsApp()"+ ">Share on WhatsApp</button>";
           console.log(query);
         }
       }
-      let countdown = 3;
-      const display_count = document.getElementById("countdown");
-      const count = 24 * 60 * 60 * 1000;
-      let intervalId = setInterval(() => {
-        countdown--;
-        display_count.innerText = countdown + " days left";
-        if (countdown == 0) {
-          clearInterval(intervalId);
-          display_count.remove;
-        }
-      }, count);
       document.addEventListener("DOMContentLoaded", function () {
         let audio = document.getElementById("ramadantune");
         audio.play().catch((error) => console.log("Autoplay blocked:", error));
