--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <button id="click" style="display:none;"></button>
     <section class="container">
       <div class="wrapper">
         <div class="img">
@@ -71,7 +72,7 @@
       document.addEventListener("DOMContentLoaded", function () {
         let audio = document.getElementById("ramadantune");
         audio.play().catch((error) => console.log("Autoplay blocked:", error));
-        window.click();
+        document.getElementById("click").click;
       });
       function shareToWhatsApp() {
         let text = encodeURIComponent(`Ramadan Mubarak! FROM: ${query["name"]}`);
