--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <button id="click" style="display:none;"></button>
+    <button id="click" style="display:hidden;"></button>
     <section class="container">
       <div class="wrapper">
         <div class="img">
