--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           document.getElementById("sName").innerHTML =
             query["name"] + "<br> " + "<h3>کی جانب سےآپ کو رمضان مبارک</h3>";
           document.getElementById("sMessage").innerHTML =
-            "<p>" + query["message"] + "</p> <br> <button onclick="`shareToWhatsApp()`>Share on WhatsApp</button>";
+            "<p>" + query["message"] + "</p> <br> <button onclick=`shareToWhatsApp()`>Share on WhatsApp</button>";
           console.log(query);
         }
       }
