--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   </head>
 
   <body>
-    <button id="click" style="display:hidden;"></button>
     <section class="container">
       <div class="wrapper">
         <div class="img">
@@ -56,8 +55,9 @@
     </section>
     <video id="ramadantune" src="ramadantune.mp3" autoplay loop></video>
     <script>
+      let query = null;
       if (window.location.search) {
-        let query = new URLSearchParams(window.location.search);
+        query = new URLSearchParams(window.location.search);
         query = Object.fromEntries(query.entries());
         if (query["message"].toString().length > 150) {
           alert("Please refrain from typing the message in URL!");
@@ -65,19 +65,18 @@
           document.getElementById("sName").innerHTML =
             query["name"] + "<br> " + "<h3>کی جانب سےآپ کو رمضان مبارک</h3>";
           document.getElementById("sMessage").innerHTML =
-            "<p>" + query["message"] + "</p> <br> <button onclick=`shareToWhatsApp()`>Share on WhatsApp</button>";
+            "<p>" + query["message"] + "</p> <br> <button onclick=shareToWhatsApp()>Share on WhatsApp</button>";
           console.log(query);
         }
       }
       document.addEventListener("DOMContentLoaded", function () {
         let audio = document.getElementById("ramadantune");
         audio.play().catch((error) => console.log("Autoplay blocked:", error));
-        document.getElementById("click").click;
+        document.click;
       });
       function shareToWhatsApp() {
-        let text = encodeURIComponent(`Ramadan Mubarak! FROM: ${query["name"]}`);
-        let url = encodeURIComponent(window.location.href);
-        let whatsappUrl = `https://wa.me/?text=${text}%20${url}`;
+        let text = "Ramadan Mubarak FROM: " + query["name"] + "!" + window.location.href;
+        let whatsappUrl = `https://api.whatsapp.com/send?text=${encodeURIComponent(text)}`;
 
         window.open(whatsappUrl, "_blank");
       }
