--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="container">
       <div class="wrapper">
         <div class="img">
-          <img src="Cresent-Icon.png" alt="" />
+          <img src="Cresent-Icon.webp" alt="" />
         </div>
         <div class="greetings">
           <h2>مارچ 2025</h2>
