--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         document.click;
       });
       function shareToWhatsApp() {
-        let text = "Ramadan Mubarak FROM: " + query["name"] + "!%0a" + window.location.href;
+        let text = "Ramadan Mubarak FROM: " + query["name"] + " " + "!%0a" + window.location.href;
         let whatsappUrl = `https://api.whatsapp.com/send?text=${encodeURIComponent(text)}`;
 
         window.open(whatsappUrl, "_blank");
