--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
       </footer>
     </section>
-    <video id="ramadantune" src="ramadantune.mp3" autoplay loop muted></video>
+    <audio id="ramadantune" src="ramadantune.mp3" autoplay loop muted></audio>
     <script>
       let query = null;
       if (window.location.search) {
@@ -72,7 +72,7 @@
       document.addEventListener("DOMContentLoaded", function () {
         let audio = document.getElementById("ramadantune");
         audio.play().catch((error) => console.log("Autoplay blocked:", error));
-        audio.unmute();
+        audio.muted = false;
       });
       function shareToWhatsApp() {
         let text = "Ramadan Mubarak FROM: " + query["name"] + "!\r\n" + window.location.href;
