--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           console.log(query);
         }
       }
-      document.addEventListener("DOMContentLoaded", function () {
+      document.addEventListener("click", function () {
         let audio = document.getElementById("ramadantune");
         audio.play().catch((error) => console.log("Autoplay blocked:", error));
         audio.muted = false;
